* fixed achievement date * added finished state

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3680,6 +3680,11 @@ ul#gifts {
     background-color:#f4f4f4;
 }
 
+.gift-container .done {
+    float:right;
+    margin-right:12px;
+    color: #00aa00;
+}
 
 .gift-container img {
     float: left;
