--- a/yaapp/templates/yabase/app/gifts/gift.mustache
+++ b/yaapp/templates/yabase/app/gifts/gift.mustache
@@ -1,7 +1,15 @@
 {% load i18n %}
 <div class='gift-container'>
     <img src='<%picture_url%>'/>
+
+    <%^enabled%>
+    <div class='done'>{% trans "action done" %}</div>
+    <%/enabled%>
+
+    <%#enabled %>
     <div class='action'><%#action_url%><a class='yabutton-small' href='<% action_url %>' <%#data_url%>data-url='<%data_url%>'<%/data_url%> <%#target%>target='<%target%>'<%/target%>>{% trans "Perform the action" %}</a><%/action_url%></div>
-    <h4><% name %></h4>
+
+    <%/enabled %>
+    <h4><% name %> (<% count %>/<% max %>)</h4>
     <p><% description %></p>
 </div>
