added tutorial window

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -476,6 +476,21 @@ HTML, BODY { height: 100%; }
         <a href="#" class="btn" data-dismiss="modal">{% trans "Close" %}</a>
     </div>
 </div>
+
+<div class="modal hide fade" id="modal-window">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal">×</button>
+        <h3>Yasound</h3>
+    </div>
+    <div class="modal-body">
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">{% trans "Close" %}</a>
+    </div>
+</div>
+
+
+
 <div id='webapp-container-parent'>
 <div id='webapp-container'>
   {% include "yabase/app/mobileLeftMenu.html" %}
