--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -5885,45 +5885,7 @@ a.yabutton-small {
         width: 724px;
     }
 
-    #min-level,
-    #slider-container,
-    #max-level {
-        display:none;
-    }
 
-    #sound-level {
-        width:75px;
-        padding-left:10px;
-    }
-
-    .responsive-volume-btn {
-        display:block;
-        float:left;
-        margin-top:12px;
-        margin-left:10px;
-        height:27px;
-        width:27px;
-        background-image: linear-gradient(bottom, rgb(57,59,60) %, rgb(138,143,145) 100%);
-        background-image: -o-linear-gradient(bottom, rgb(57,59,60) %, rgb(138,143,145) 100%);
-        background-image: -moz-linear-gradient(bottom, rgb(57,59,60) %, rgb(138,143,145) 100%);
-        background-image: -webkit-linear-gradient(bottom, rgb(57,59,60) %, rgb(138,143,145) 100%);
-        background-image: -ms-linear-gradient(bottom, rgb(57,59,60) %, rgb(138,143,145) 100%);
-
-        background-image: -webkit-gradient(
-            linear,
-            left bottom,
-            left top,
-            color-stop(0, rgb(57,59,60)),
-            color-stop(1, rgb(138,143,145))
-        );
-        border-radius:50%;
-        box-shadow: 0px 1px 2px #202223;
-    }
-
-    .responsive-volume-btn img {
-        padding-left:7px;
-        padding-top:7px;
-    }
 
     .nav-collapse {
         clear:none;
@@ -5935,7 +5897,6 @@ a.yabutton-small {
     }
 
     #user-menu {
-        width:155px;
     }
 
     .switch-container {
@@ -5951,14 +5912,32 @@ a.yabutton-small {
 
     #profile-picture {
         padding-left:0px;
+        margin-left:20px;
     }
 
     #header .navbar-inner {
         background-image: url(/media/app/images/header_bg.png);
         background-repeat: repeat-x;
-        height: 76px;
+        height: 113px;
         padding-top:1px;
         padding-bottom:0px;
+    }
+
+    #player #radio-cover {
+        margin-left:18px;
+    }
+
+    #player #metadata-container {
+        width:290px;
+    }
+    #player #metadata-container #player-title {
+        width:290px;
+    }
+    #player #metadata-container #player-title span {
+        display: inline-block;
+        overflow: hidden;
+        width:160px;
+        height:20px;
     }
 
     #mobile-menu-logo {
