fixed margin in mobile mode

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -4897,7 +4897,9 @@ a.yabutton-small {
         margin-left:4.5%;
     }
 
-
+    #webapp-container {
+        margin-top: 158px;
+    }
 /*-- SETTINGS MENU --*/
 
     #mobile-menu-content {
