added badge on top radios

--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -33,6 +33,7 @@
 				<img src="/media/app/images/radio/radio-profile-picture-mask.png" width="28" height="28" alt="Radio Profile Picture Mask"/>
 			</span>
 	    </div>
+	    <%#top_rank%><div class='badge'><% top_rank %></div><%/top_rank%>
 	    <div class='caption'>
 	        <div class="caption-content">
 	            <h5><% name %></h5>
