--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1219,6 +1219,19 @@ input::-webkit-input-placeholder {
     z-index:4;
 }
 
+.radio-cell .badge {
+    width:32px;
+    height:32px;
+    position:absolute;
+    top:0px;
+    right:8px;
+    text-align:center;
+    margin:0;
+    padding-top:6px;
+    z-index:4;
+    background: url('../app/images/radio/radio-badge.png') no-repeat 50% 0%;
+}
+
 .radio-cell .profile img {
     position:absolute;
     border-radius:50px;
