--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -487,6 +487,19 @@ HTML, BODY { height: 100%; }
     </div>
 </div>
 
+<div class="modal hide fade" id="modal-dialog">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal">×</button>
+        <h3></h3>
+    </div>
+    <div class="modal-body">
+        <p>
+        </p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">{% trans "Close" %}</a>
+    </div>
+</div>
 
 
 <div id='webapp-container-parent'>
