loading gift black for radios

--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -134,7 +134,7 @@
         </div>
         <div id='gifts-container'>
             <ul id='gifts'>
-                <img class='loading-mask' src='/media/images/loading.gif'/>
+                <img class='loading-mask' src='/media/images/loading-black.gif'/>
             </ul>
             <div id='pagination'></div>
         </div>
@@ -172,7 +172,7 @@
               </div>
               <div id='gifts-container'>
                   <ul id='gifts'>
-                      <img class='loading-mask' src='/media/images/loading.gif'/>
+                      <img class='loading-mask' src='/media/images/loading-black.gif'/>
                   </ul>
                   <div id='pagination'></div>
               </div>
