invite with twitter is ok

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3705,6 +3705,11 @@ ul .radio-with-stats-cells li {
     color:black;
 }
 
+#modal-invite-twitter textarea {
+    width:100%;
+    height:80px;
+}
+
 /**
  * Gift
  */
