--- a/yaapp/templates/yabase/app/friends/userFriendsPage.mustache
+++ b/yaapp/templates/yabase/app/friends/userFriendsPage.mustache
@@ -1,9 +1,13 @@
 {% load i18n %}
-<div class='span12 profile-background'>
+<div class='row profile-background'>
+  <div class='span12' id='user-profile'>
+  </div>
+<div class='span12 no-margin'>
     <button class='yabutton right' id='back-btn'>{% trans 'Back to profile' %}</button>
     <h2 class='zone-title'>{% trans "People you follow" %}</h2>
     <ul id='results'>
     <img class='loading-mask' src='/media/images/loading-white.gif'/>
     </ul>
     <div class='cell-pagination' id='pagination'></div>
+</div>
 </div>
