--- a/yaapp/templates/yabase/app/top/topRadiosPage.mustache
+++ b/yaapp/templates/yabase/app/top/topRadiosPage.mustache
@@ -2,12 +2,14 @@
 <div class='span12 no-margin'>
     <ul id='results' class='radio-cells'>
     {% if not radios %}
-    <img class='loading-mask' src='/media/images/loading.gif'/>
     {% else %}
         {% for radio in radios %}
         <li>{% include 'yabase/app/radioCell.html' %}</li>
         {% endfor %}
     {% endif %}
     </ul>
+    {% if not radios %}
+    <img class='loading-mask' src='/media/images/loading.gif'/>
+    {% endif %}
     <div class='cell-pagination' id='pagination'></div>
 </div>
