--- a/yaapp/templates/yabase/app/radio/sharePage.mustache
+++ b/yaapp/templates/yabase/app/radio/sharePage.mustache
@@ -3,7 +3,13 @@
     <p>{% trans "Share this song on:" %}
     </p>
     <ul>
-    <li><a href='#' id='fb_share'>{% trans "Facebook" %}</a></li>
-    <li><a href='#' id='tw_share' target='blank'>{% trans "Twitter" %}</a></li>
+    <li><a href='#' id='fb_share' class='btn-facebook'><img src="/media/app/images/login/login-icon-facebook.png"><span>{% trans "Facebook" %}</span></a></li>
+    <li><a href='#' id='tw_share' class='btn-twitter' target='blank'><img src="/media/app/images/login/login-icon-twitter.png"><span>{% trans "Twitter" %}</span></a></li>
     </ul>
+    <div class='clear'>&nbsp;</div>
+    <label for='stream'>{% trans "Link to stream:" %}</label>
+    <input id='stream' value='<% stream_url %>' />
+
+    <label for='widget'>{% trans "Add this radio on your blog:" %}</label>
+    <textarea id='widget'><iframe frameborder="0" height="380" scrolling="no" src="https://yasound.com/widget/<% uuid %>"></iframe></textarea>
 </div>
