* updated text for "show more" (can be changed by each view) * fixed menu selected tooltip position for people and favorites

--- a/yaapp/templates/yabase/app/pagination.mustache
+++ b/yaapp/templates/yabase/app/pagination.mustache
@@ -1,4 +1,4 @@
 {% load i18n %}
 <div class='pagination'>
-	<button href="#" class='yabutton-large servernext'>{% trans "Show more" %}</button>
+	<button href="#" class='yabutton-large servernext'><% title %></button>
 </div>
