--- a/yaapp/templates/yabase/app/friends/friendsPage.mustache
+++ b/yaapp/templates/yabase/app/friends/friendsPage.mustache
@@ -38,7 +38,7 @@
 <div class='row common-background'>
 
     <div class='span12 no-margin invite'>
-        <h1>{% trans "Invite your friends" %}</h1>
+        <h1>{% trans "Invite your friends and win HD" %}</h1>
         <ul>
             <li>
                 <div id='invite-facebook'>
