--- a/yaapp/templates/yabase/app/notifications/notificationsPage.mustache
+++ b/yaapp/templates/yabase/app/notifications/notificationsPage.mustache
@@ -12,7 +12,7 @@
             {% cycle 'notification-even' 'notification-odd' as row_color silent %}
             <li>{% include 'yabase/app/notifications/notification.mustache' with row_color=row_color%}</li>
             {% endfor %}
-
+            <div class='empty' style='display:none'>{% trans "Congratulations! You have read all your notifications." %}</div>
         </ul>
         <div id='pagination'>{% include "yabase/app/pagination.mustache" %}</div>
 	</div>
