added status page & programming history (not everything is logged right now)

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -276,6 +276,9 @@ HTML, BODY { height: 100%; }
    <script type="text/html" id="programmingPageTemplate">
       {% include "yabase/app/programming/programmingPage.mustache" %}
    </script>
+   <script type="text/html" id="programmingStatusPageTemplate">
+      {% include "yabase/app/programming/statusPage.mustache" %}
+   </script>
    <script type="text/html" id="playlistTemplate">
       {% include "yabase/app/programming/playlist.mustache" %}
    </script>
@@ -284,6 +287,12 @@ HTML, BODY { height: 100%; }
    </script>
    <script type="text/html" id="songInstanceCellTemplate">
       {% include "yabase/app/programming/songInstanceCell.mustache" %}
+   </script>
+   <script type="text/html" id="programmingStatusCellTemplate">
+      {% include "yabase/app/programming/statusCell.mustache" %}
+   </script>
+   <script type="text/html" id="programmingStatusDetailsCellTemplate">
+      {% include "yabase/app/programming/statusDetailsCell.mustache" %}
    </script>
    <script type="text/html" id="programmingToolbarTemplate">
       {% include "yabase/app/programming/programmingToolbar.mustache" %}
