--- a/yaapp/templates/yabase/app/programming/programmingPage.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingPage.mustache
@@ -9,12 +9,15 @@
         <div class='well'>
             <ul class="nav nav-list">
               <li class="nav-header">{% trans "Default playlist" %}</li>
-              <li class="active"><a href="#">{% trans "Programming" %}</a></li>
+              <li class="active"><a href="#" id='programming-btn'>{% trans "Programming" %}</a></li>
               <li class="divider"/>
+              <li><a href="#" id='status-btn'>{% trans "History" %}</a></li>
             </ul>
         </div>
     </div>
 
     <div class='span9' id='playlist'>
     </div>
+
+    <div class='span9' id='status' style='display:none'/>
 </div>
