improved history page, added bulk storage of remove playlist

--- a/yaapp/templates/yabase/app/programming/statusPage.mustache
+++ b/yaapp/templates/yabase/app/programming/statusPage.mustache
@@ -6,7 +6,7 @@
         <h3>{% trans "Details" %}</h3>
     </div>
     <div class="modal-body">
-        <table class="table table-bordered table-striped">
+        <table class="table table-bordered table-striped" id='status-details-list'>
         <thead>
             <tr>
                 <th>{% trans "Name" %}</th>
@@ -15,8 +15,6 @@
                 <th>{% trans "Status" %}</th>
             </tr>
         </thead>
-        <tbody id='status-details-list'>
-        </tbody>
         </table>
     </div>
     <div class="modal-footer">
