added delete command in programming history

--- a/yaapp/templates/yabase/app/programming/statusCell.mustache
+++ b/yaapp/templates/yabase/app/programming/statusCell.mustache
@@ -3,5 +3,8 @@
 <td><% formatted_date %></td>
 <td><% formatted_type %></td>
 <td><% formatted_status %></td>
-<td><button class='yabutton-small import'>{% trans 'open' %}</button></td>
+<td>
+    <button class='yabutton-small open'>{% trans 'open' %}</button>
+    <button class='yabutton-small delete'>{% trans 'delete' %}</button>
+</td>
 
