hide teaser with cookie

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -514,7 +514,7 @@ HTML, BODY { height: 100%; }
   {% include "yabase/app/mobileLeftMenu.html" %}
   {% include "yabase/app/mobileCenterMenu.html" %}
 
-  <div class='container' id='teaser'>
+  <div class='container' id='teaser' style='display:none;'>
     <div class='row'>
       <div class='span4' id='teaser-listen'>
           {% url webapp_top app_name as link %}
